--- a/src/main/dev_abhi/assets/resources/styles/css/style.comp.css
+++ b/src/main/dev_abhi/assets/resources/styles/css/style.comp.css
@@ -1,11 +1,16 @@
 /* 
   // =====MEDIA-QUERY-MANAGER=====$BREAKPOINT-ARGUMENT-CHOISES=====
 	  - 0-420PX			:	SMALL-PHONE
-      - 420-600PX    	:   PHONE
-      - 600-900PX    	:   TAB-PORT
-      - 900-1200PX   	:   TAB-LAND
-      - 1200-1800PX  	:   NORMAL STYLE
+      - 0-560PX 	   	:   PHONE
+      - 560-940PX    	:   TAB-PORT
+      - 940-1080PX   	:   TAB-LAND
+      - 1080-1800PX  	:   NORMAL STYLE
       - 1800PX+      	:   BIG-DESK
+
+	  	************Screens Max Width************
+		- screen: 1080px	= 67.5em;
+		- screen: 940px		= 58.75em;
+		- screen: 560px		= 35em;
 */
 @keyframes MoveInLeft {
   0% {
@@ -35,6 +40,37 @@
     opacity: 1;
     transform: translate(0); } }
 
+@keyframes logoSpin {
+  from {
+    transform: scale(1) rotate(0deg); }
+  to {
+    transform: scale(1.2) rotate(360deg); } }
+
+/* ================================Loading Animations=================== */
+@keyframes fadeInOut {
+  0% {
+    opacity: 0.5; }
+  50% {
+    opacity: 1; }
+  100% {
+    opacity: 0.5; } }
+
+@keyframes scaling {
+  0% {
+    transform: scale(1.2); }
+  50% {
+    transform: scale(1); }
+  100% {
+    transform: scale(1.2); } }
+
+@keyframes boxMoveing {
+  0%,
+  40% {
+    background-position: 0 0, 0 50%, 0 100%, 50% 100%, 100% 100%, 100% 50%, 100% 0, 50% 0, 50% 50%; }
+  60%,
+  100% {
+    background-position: 0 50%, 0 100%, 50% 100%, 100% 100%, 100% 50%, 100% 0, 50% 0, 0 0, 50% 50%; } }
+
 *,
 *::after,
 *::before {
@@ -44,261 +80,257 @@
 
 html {
   font-size: 62.5%;
-  scroll-behavior: smooth;
-  /* =====================================================================
-
-  // ===========ITS THE REGULAR TRICK========TYPE @MEDIA QUERY FOR EVERY SECTION/ELEMENTS=========
-  // @media (max-width: 600px) {
-  //   font-size: 50%;
-  // }
-
-  // ===========ITS THE REGULAR @MIXIN TRICK=================
-  // @include respond-phone {
-  //   font-size: 50%;
-  // }
-
-  ===================================================================== */ }
-  @media only screen and (max-width: 75em) {
+  scroll-behavior: smooth; }
+  @media only screen and (max-width: 67.5em) {
     html {
-      font-size: 56.25%; } }
-  @media only screen and (max-width: 56.25em) {
+      font-size: 53.125%; } }
+  @media only screen and (max-width: 35em) {
     html {
-      font-size: 50%; } }
-  @media only screen and (max-width: 26.25em) {
-    html {
-      font-size: 40.625%; } }
+      font-size: 46.875%; } }
   @media only screen and (min-width: 112.5em) {
     html {
       font-size: 75%; } }
 
 body {
   box-sizing: border-box;
-  padding: 3rem; }
-  @media only screen and (max-width: 75em) {
-    body {
-      padding: 1.5rem; } }
-  @media only screen and (max-width: 37.5em) {
-    body {
-      padding: 0rem; } }
+  width: auto;
+  height: 100vh;
+  /*
+	background: repeating-linear-gradient(
+		to right,
+		$color-gray-2 10%,
+		$tertiary-color-light 20%
+	); 
+	*/
+  background: linear-gradient(135deg, #1e1e2f, #2c3e50);
+  position: relative;
+  top: 0;
+  left: 0;
+  overflow: hidden; }
 
-.section-main {
-  margin-top: 1rem; }
-
-::selection {
-  background-color: #55c57a;
-  color: #fff; }
+section {
+  height: 100%; }
 
 ::-webkit-scrollbar {
-  height: 0px;
-  width: 5px; }
+  width: 0;
+  height: 0; }
 
-::-webkit-scrollbar-thumb {
-  height: 150px;
-  background-color: #55c57a;
-  border-radius: 100px; }
+::selection {
+  color: #eee !important; }
 
 body {
-  font-family: "Lato", sans-serif;
-  line-height: 1.7;
-  font-weight: 400;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
   font-size: 1.6rem;
-  color: #777;
-  backface-visibility: hidden; }
-  @media only screen and (max-width: 56.25em) {
-    body {
-      font-size: 2.2rem; } }
-  @media only screen and (max-width: 26.25em) {
-    body {
-      font-size: 2.3rem; } }
-  @media only screen and (min-width: 112.5em) {
-    body {
-      font-size: 2rem; } }
+  color: #f5f5f5; }
 
-.heading-primary {
+.heading__primary {
+  font-size: 2.4rem;
+  letter-spacing: -0.5px;
+  word-spacing: -0.7px; }
+
+.btn {
   color: #fff;
-  text-transform: uppercase;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  margin-bottom: 6rem; }
-  .heading-primary--main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation: MoveInLeft 1s ease-out; }
-    @media only screen and (max-width: 37.5em) {
-      .heading-primary--main {
-        letter-spacing: 2rem;
-        font-size: 4rem; } }
-  .heading-primary--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.75rem;
-    animation: MoveInRight 1s ease-out; }
-    @media only screen and (max-width: 37.5em) {
-      .heading-primary--sub {
-        letter-spacing: 0.5rem; } }
-
-.secondary-heading {
-  font-size: 3.5rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 0.2rem;
-  padding: 0 2rem;
-  background-image: linear-gradient(to right, #7ed56f, #28b485);
-  display: inline-block;
-  -webkit-background-clip: text;
-  color: transparent;
-  transition: all 0.2s; }
-  @media only screen and (max-width: 56.25em) {
-    .secondary-heading {
-      font-size: 3rem; } }
-  .secondary-heading:hover {
-    transform: scale(1.1) skewX(15deg) skewY(2deg);
-    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
-
-.heading-tertiary {
-  font-size: inherit;
-  font-weight: 700;
-  text-transform: uppercase; }
-
-.paragraph:not(:last-child) {
-  margin-bottom: 3rem; }
-
-.btn, .btn:link, .btn:visited {
-  text-decoration: none;
-  display: inline-block;
-  padding: 1.5rem 4rem;
-  border-radius: 10rem;
-  text-transform: uppercase;
-  transition: all 0.2s;
-  position: relative;
+  background: #667eea;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: stretch;
+  padding: 0.8rem 1.2rem;
+  margin-top: 1rem;
   border: none;
-  cursor: pointer; }
+  border-radius: 0.8rem;
+  cursor: pointer;
+  transition: all 0.3s ease; }
+  .btn:hover {
+    background: #5265bb;
+    transform: translateY(-0.3rem);
+    box-shadow: 0 1rem 2rem rgba(51, 51, 51, 0.2); }
+  .btn:active {
+    outline: none;
+    transform: translateY(-0.1rem);
+    box-shadow: 0 0.5rem 1rem rgba(51, 51, 51, 0.2); }
+  .btn__menu {
+    display: none;
+    align-self: center;
+    margin: 0 0 0 auto;
+    /* ================================Media Query================== */ }
+    @media only screen and (max-width: 58.75em) {
+      .btn__menu {
+        display: flex !important; } }
 
-.btn:hover {
-  transform: translateY(-0.3rem);
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
-  .btn:hover::before {
-    transform: scaleX(1.4) scaleY(1.6);
-    cursor: default;
-    opacity: 0; }
-
-.btn:active, .btn:focus {
-  outline: none;
-  transform: translateY(-0.1rem);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
-
-.btn::after {
-  content: "";
-  display: inline-block;
+/* ================================MainContainer - DropBox================= */
+.mainContainer {
+  max-width: 793.7007874px;
   width: 100%;
   height: 100%;
-  background-color: transparent;
-  color: #fff;
-  border-radius: 10rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1; }
+  background: #2a2a40;
+  padding: 1rem 1rem 15rem 1rem;
+  box-shadow: 0 2rem 2rem 1rem rgba(0, 0, 0, 0.2), 0px 4rem 4rem 4rem rgba(0, 0, 0, 0.2), inset 0px 2rem 4rem rgba(0, 0, 0, 0.2);
+  position: relative;
+  overflow: hidden;
+  overflow-y: scroll;
+  /* ================================Media Query===================== */ }
+  @media only screen and (max-width: 67.5em) {
+    .mainContainer {
+      max-width: 60vw; } }
+  @media only screen and (max-width: 58.75em) {
+    .mainContainer {
+      max-width: 100vw; } }
+  .mainContainer::before {
+    display: none;
+    width: 100%;
+    height: 100%;
+    background: repeating-conic-gradient(#ccc 0% 25%, #fff 0% 50%) 50%/2rem 2rem, rgba(70, 76, 179, 0.8);
+    background-blend-mode: color-burn;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    transform-origin: center;
+    box-shadow: inset 0 0 1.5rem rgba(0, 0, 0, 0.2);
+    pointer-events: none;
+    transition: all 0.3s, box-shadow 0.3s ease; }
 
-.btn::before {
+.dragHover.mainContainer::before {
   content: "";
-  display: inline-block;
+  display: table;
+  pointer-events: none;
+  animation: fadeInOut 3s infinite linear, scaling 2s 2 linear; }
+
+/* ================================ImagesContainer========================= */
+.imgContainer {
+  min-height: 100%;
   width: 100%;
-  height: 100%;
-  border-radius: 10rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  transition: all 0.4s; }
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 110px);
+  grid-template-rows: max-content;
+  align-content: start;
+  gap: 2rem;
+  break-inside: avoid-page; }
 
-.btn--white {
-  color: #777;
-  background-color: #fff; }
-  .btn--white:hover::before {
-    background-color: #fff; }
-
-.btn--green {
-  color: #fff;
-  background-color: #55c57a; }
-  .btn--green:hover::before {
-    background-color: #55c57a; }
-
-.btn--animated {
-  animation: MoveInBottom 0.5s ease-out 0.75s;
-  animation-fill-mode: backwards; }
-
-.btn-text:link, .btn-text:visited {
+.img {
   display: inline-block;
-  font-size: 1.8rem;
-  color: #55c57a;
-  text-decoration: none;
-  padding: 3px;
-  border-bottom: 1px solid #55c57a;
-  transition: all 0.2s; }
+  /* width: 11rem; */
+  width: 100%;
+  height: auto;
+  border: 0.3rem solid #1e1e2f;
+  backface-visibility: hidden;
+  break-inside: avoid-page;
+  cursor: pointer;
+  box-shadow: 0 0.4rem 1.5rem rgba(245, 245, 245, 0.2);
+  transition: transform 0.2s; }
 
-.btn-text:hover {
-  color: #fff;
-  background-color: #55c57a;
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
-  transform: translateY(-2px); }
+.img:hover {
+  filter: drop-shadow(0 0 2rem rgba(147, 152, 255, 0.4));
+  transform: scale(1.03); }
 
-.btn-text:active {
-  transform: translateY(0);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15); }
+/* ================================UtilityBox============================== */
+.utilityBox {
+  color: #eee;
+  background: #2a2a40;
+  min-width: min-content;
+  max-width: 32vw;
+  padding: 2.4rem;
+  border: 2px solid #f5f5f5;
+  border-radius: 1.2rem;
+  box-shadow: 0 0 2rem 1rem rgba(0, 0, 0, 0.2), 0 0 4rem 4rem rgba(0, 0, 0, 0.2), inset 0 0 4rem rgba(0, 0, 0, 0.6);
+  hyphens: auto;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(10rem, 30rem));
+  align-items: center;
+  gap: 1rem;
+  position: fixed;
+  top: 50%;
+  right: 3rem;
+  transform: translateY(-50%);
+  z-index: 99;
+  /* ================================Media Query===================== */ }
+  @media only screen and (max-width: 58.75em) {
+    .utilityBox {
+      max-width: 60vw;
+      transform: translate(calc(100% + 5rem), -50%);
+      transition: all 0.6s ease-in-out; }
+      .utilityBox.show {
+        transform: translate(0, -50%); } }
+  @media only screen and (max-width: 35em) {
+    .utilityBox {
+      max-width: 80vw; }
+      .utilityBox.show {
+        transform: translate(2rem, -50%); }
+      .utilityBox .btn {
+        grid-column: 1 / -1; } }
 
-.row {
-  max-width: 120rem;
-  margin: 0 auto; }
-  .row:not(:last-child) {
-    margin-bottom: 8rem; }
-    @media only screen and (max-width: 56.25em) {
-      .row:not(:last-child) {
-        margin-bottom: 6rem; } }
-  @media only screen and (max-width: 56.25em) {
-    .row {
-      max-width: 50rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .row {
-      width: 95% !important; } }
-  .row::after {
-    content: "";
-    display: table;
-    clear: both; }
-  .row [class^="col-"] {
-    float: left; }
-    .row [class^="col-"]:not(:last-child) {
-      margin-right: 3rem; }
-      @media only screen and (max-width: 56.25em) {
-        .row [class^="col-"]:not(:last-child) {
-          margin-right: 0 !important;
-          margin-bottom: 6rem; } }
-    @media only screen and (max-width: 56.25em) {
-      .row [class^="col-"] {
-        width: 100% !important; } }
-  .row .col-1-of-2 {
-    width: calc((100% - 3rem) / 2); }
-  .row .col-1-of-3 {
-    width: calc((100% - 2 * 3rem) / 3); }
-  .row .col-2-of-3 {
-    width: calc( 2 * ((100% - 2 * 3rem) / 3) + 3rem); }
-  .row .col-1-of-4 {
-    width: calc((100% - 3 * 3rem) / 4); }
-  .row .col-2-of-4 {
-    width: calc( 2 * ((100% - 3 * 3rem) / 4) + 3rem); }
-  .row .col-3-of-4 {
-    width: calc( 3 * ((100% - 3 * 3rem) / 4) + 2 * 3rem); }
+.utilityBox label:not(:first-child) {
+  margin-top: 1.4rem; }
 
-@media only screen and (max-width: 56.25em) {
-  .footer .row {
-    max-width: 80rem;
-    width: 85%; } }
+.utilityBox label,
+.utilityBox input {
+  grid-column: 1 / -1;
+  color: inherit;
+  width: 100%;
+  display: block;
+  border: none;
+  outline: none; }
 
-.navigation__checkbox {
-  display: none; }
+.utilityBox input[type="number"] {
+  color: #333;
+  background-color: #eee;
+  padding: 0.4rem 1.2rem;
+  border: 0.2rem solid #eee;
+  border-radius: 0.6rem; }
+  .utilityBox input[type="number"]::selection {
+    color: #000 !important; }
+
+/* ================================Footer================================== */
+.footer {
+  color: #eee;
+  background: #1e1e2f;
+  width: 100%;
+  height: 4rem;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  z-index: 9; }
+
+.aurthor a:link {
+  display: inline-block;
+  color: #9ae6b4;
+  backface-visibility: hidden;
+  transition: all 0.3s; }
+
+.aurthor a:hover {
+  color: #9ae6b5dc;
+  transform: translateY(-0.1rem) scale(1.05); }
+
+.aurthor a:active {
+  transform: translateY(0) scale(1); }
+
+.header {
+  color: #eee;
+  background: linear-gradient(90deg, #667eea, #764ba2);
+  width: 100%;
+  height: 7rem;
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 1rem;
+  position: relative;
+  top: 0;
+  left: 0; }
+  .header__logo {
+    width: 4rem;
+    height: 4rem;
+    mix-blend-mode: color-dodge;
+    will-change: filter;
+    transition: filter 0.3s;
+    animation: logoSpin infinite 9s linear; }
 
 .navigation__button {
   width: 7rem;
@@ -312,56 +344,14 @@ body {
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
   text-align: center;
   cursor: pointer; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 58.75em) {
     .navigation__button {
       top: 4rem;
       right: 4rem; } }
-  @media only screen and (max-width: 37.5em) {
+  @media only screen and (max-width: 35em) {
     .navigation__button {
       top: 3rem;
       right: 3rem; } }
-
-.navigation__background {
-  width: 6rem;
-  height: 6rem;
-  border-radius: 50%;
-  background-image: radial-gradient(#7ed56f, #28b485);
-  position: fixed;
-  top: 6.5rem;
-  right: 6.5rem;
-  z-index: 1000;
-  transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
-  @media only screen and (max-width: 56.25em) {
-    .navigation__background {
-      top: 4.5rem;
-      right: 4.5rem; } }
-  @media only screen and (max-width: 37.5em) {
-    .navigation__background {
-      top: 3.5rem;
-      right: 3.5rem; } }
-
-.navigation__nav {
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1500;
-  opacity: 0;
-  visibility: hidden;
-  width: 0;
-  transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
-
-.navigation__list {
-  list-style: none;
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center; }
-
-.navigation__item {
-  margin: 1rem; }
 
 .navigation__link:link, .navigation__link:visited {
   display: inline-block;
@@ -379,17 +369,9 @@ body {
     margin-right: 1.5rem; }
 
 .navigation__link:hover, .navigation__link:active {
-  color: #55c57a;
+  color: #667eea;
   background-position: 100%;
   transform: translateX(1rem); }
-
-.navigation__checkbox:checked ~ .navigation__background {
-  transform: scale(80); }
-
-.navigation__checkbox:checked ~ .navigation__nav {
-  opacity: 1;
-  visibility: visible;
-  width: 100%; }
 
 .navigation__icon {
   position: relative;
@@ -415,16 +397,40 @@ body {
 .navigation__button:hover .navigation__icon::after {
   top: 1rem; }
 
-.navigation__checkbox:checked + .navigation__button .navigation__icon {
+.navigation__button .navigation__icon {
   background-color: transparent; }
 
-.navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+.navigation__button .navigation__icon::before {
   transform: rotate(135deg);
   top: 0; }
 
-.navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+.navigation__button .navigation__icon::after {
   transform: rotate(-135deg);
   top: 0; }
+
+.sectionHome {
+  height: 100%; }
+
+/* ================================Printing Page=========================== */
+@media print {
+  body {
+    background: repeating-conic-gradient(#ccc 0% 25%, #fff 0% 50%) 50%/2rem 2rem; }
+    body * {
+      visibility: hidden !important; }
+  .mainContainer {
+    background: none !important;
+    padding: 0 !important;
+    box-shadow: none !important;
+    visibility: visible !important;
+    overflow: visible !important; }
+    .mainContainer * {
+      visibility: visible !important; }
+  .utilityBox,
+  .header,
+  .footer {
+    display: none !important; }
+  @page {
+    padding: 1.5rem; } }
 
 .u-center-text {
   text-align: center !important; }
@@ -434,13 +440,13 @@ body {
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 58.75em) {
     .u-margin-bottom-medium {
       margin-bottom: 3rem !important; } }
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 58.75em) {
     .u-margin-bottom-big {
       margin-bottom: 5rem !important; } }
 
@@ -452,3 +458,39 @@ body {
 
 .overflow-fix {
   overflow: hidden; }
+
+.pdf-export {
+  background: #fff; }
+
+/* ================================Page Download Loading================ */
+.loader {
+  width: 100%;
+  height: 100%;
+  background: #2a2a40;
+  background: linear-gradient(135deg, #667eea, #764ba2);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -9; }
+  .loader::after {
+    content: "";
+    position: absolute;
+    backface-visibility: hidden;
+    will-change: transform;
+    /* GPU accelerated */
+    width: 9.5rem;
+    height: 9.5rem;
+    border-radius: 1rem;
+    --c: no-repeat linear-gradient(#fff);
+    background: var(--c), var(--c), var(--c), var(--c), var(--c), var(--c), var(--c), var(--c), var(--c);
+    background-size: 1.6rem 1.6rem;
+    background-position: 0 0, 0 50%, 0 100%, 50% 100%, 100% 100%, 100% 50%, 100% 0, 50% 0, 50% 50%;
+    animation: fadeInOut 1s infinite, logoSpin 1s infinite !important;
+    z-index: 99999; }
+
+.showLoader ~ .loader {
+  display: flex;
+  z-index: 9999; }
